--- a/AlloyBuild.in
+++ b/AlloyBuild.in
@@ -5,7 +5,7 @@ units         metal
 boundary      p p p
 atom_style    atomic
 
-#Building process
+#Building process; Based on NaCl model
 #http://www.52souji.net/build-alloy-model-in-lammps.html
 
 lattice      custom   3.52  a1  1.0 0.0 0.0   a2  0.0 1.0 0.0   a3 0.0 0.0 1.0  &
@@ -14,6 +14,10 @@ lattice      custom   3.52  a1  1.0 0.0 0.0   a2  0.0 1.0 0.0   a3 0.0 0.0 1.0  
 region        box   block 0 3 0 3 0 3
 create_box    2     box
 create_atoms  2     box basis 1 1 basia 2 1 basis 3 1 basis 4 1 basis 5 2 basis 6 2 basis 7 2 basis 8 2
+
+#https://journals_aps.gg363.site/prb/abstract/10.1103/PhysRevB.69.144113
+#Misfit-energy-increasing dislocations in vapor-deposited CoFe/NiFe multilayers
+#Other metal alloy potentials: https://www.ctcms.nist.gov/potentials/system/
 
 pair_style    eam/alloy
 pair_coeff    * * ZrCuAlFeNiTiCo_Zhou04.eam.alloy   Ni Ti
